--- a/README
+++ b/README
@@ -1,3 +1,11 @@
 arkadaşlar merhaba 0 1 saat 1.5 saat aralığında yaptığım bu boş altyapıyı size verim dedim işte isteyen kullanabilir bozdum bu arada önüne gelen kullanmasın zaman harcadık okdar neyse
 bi sorunuz olursa
 ktria#0909
+
+Bunlarda Dostiler;
+Spanker 1000 Satırlı Radyo Botu = https://github.com/Spxnker/discord-radyo-botu
+Muratva Eski Mod = https://github.com/muratvastark/my-engine
+Totika Role-Guard = https://github.com/Totikashu/totika-roleguard
+
+""
+= )
